# Document-Logic-MCP

./: .gitignore  CHANGELOG.md  COVERAGE.md  DISCLAIMER.md  Dockerfile  PRIVACY.md  README.md  SECURITY.md  TOOLS.md  manifest.json  pyproject.toml  requirements.txt  run.py  run_extraction.py  server.json  test_payment_architecture.docx  test_tough_document_fixed.py  verify_section_storage.py
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-azure.yml  ghcr-build.yml  mcpb-bundle.yml  security-scanning.yml
data/: coverage.json
docs/: demonstration-results.md  section-extraction-fix.md  test-results-comparison.md  tough-document-test-results.md  tough_document_output.md  usage.md
docs/plans/: 2026-01-30-document-logic-mcp-design.md
src/: __init__.py
src/document_logic_mcp/: __init__.py  __main__.py  database.py  embeddings.py  export.py  http_server.py  models.py  query.py  server.py  storage.py  tools.py
src/document_logic_mcp/extraction/: __init__.py  extractor.py  pipeline.py  prompts.py  schemas.py
src/document_logic_mcp/parsers/: __init__.py  base.py  csv_parser.py  docx_parser.py  docx_table_converter.py  html_parser.py  image_parser.py  json_parser.py  pdf_parser.py  pptx_parser.py  text_parser.py  xlsx_parser.py
src/document_logic_mcp/resources/: __init__.py  technology_terminology.json
tests/: __init__.py  conftest.py  test_database.py  test_deprecation.py  test_export.py  test_extraction.py  test_http.py  test_http_extract.py  test_parsers.py  test_pipeline.py  test_query.py  test_storage.py  test_tools.py  test_validation.py
tests/integration/: test_full_workflow.py  test_mcp_protocol.py
