[project]
name = "document-logic-mcp"
version = "0.1.0"
description = "MCP server for structured document intelligence extraction"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "anthropic>=0.87.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "pytesseract>=0.3.10",
    "Pillow>=12.1.1",
    "sentence-transformers>=2.2.0",
    "cryptography>=46.0.7",
    "aiosqlite>=0.19.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.21",
    "beautifulsoup4>=4.12.0",
    "pdf2image>=1.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
document-logic-mcp = "document_logic_mcp.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (may require external services)",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
